Met en place la base visuelle de la page d'accueil

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,11 @@
   <title>{% block title %}EcoRide{% endblock %}</title>
   <link rel="stylesheet" href="{{ asset('css/global.css') }}">
   {% block stylesheets %}{% endblock %}
+
+<!-- Police --!>
+
+
+
 </head>
 <body>
   {% block body %}{% endblock %}
