--- a/public/css/global.css
+++ b/public/css/global.css
@@ -43,21 +43,22 @@
   font-display: swap;
 }
 
-@font-face{
+@font-face {
   font-family: "Montserrat";
-  src: url("/polices/montserrat-600.woff2") format("woff2");
+  src: url("/polices/montserrat-600.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 
-@font-face{
+@font-face {
   font-family: "Montserrat";
-  src: url("/polices/montserrat-700.woff2") format("woff2");
+  src: url("/polices/montserrat-700.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
+
 
 /* Base du site : fond sombre, texte clair, Inter en 16px minimum */
 html, body{
