--- a/templates/fragments/pied_de_page.html.twig
+++ b/templates/fragments/pied_de_page.html.twig
@@ -12,9 +12,10 @@
       </div>
 
       <div class="pied_mentions">
-        <a href="#">Mentions légales</a>
+        <a href="{{ path('mentions_legales') }}">Mentions légales</a>
       </div>
 
     </div>
   </div>
 </footer>
+
