--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,8 +6,10 @@
 
   <title>{% block title %}EcoRide{% endblock %}</title>
 
-  <link rel="stylesheet" href="{{ asset('css/global.css') }}">
-  {% block stylesheets %}{% endblock %}
+<link rel="stylesheet" href="{{ asset('css/global.css') }}">
+<link rel="stylesheet" href="{{ asset('css/accueil.css') }}">
+{% block stylesheets %}{% endblock %}
+
 </head>
 
 <body>
